--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,43 @@ h3.logo {
 }
 
 img.main-image {
-  width: 300px;
-  height: 200px;
+  width: 600px;
+  height: 400px;
+  border-radius: 10px;
+}
+
+.section-one {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 10%;
+}
+
+div.main-one {
+  margin-right: 50px;
+}
+
+p.main-text {
+  font-size: 48px;
+  color: #f9faf8;
+  font-weight: 700;
+}
+
+button.sign-up {
+  margin-top: 5px;
+  padding: 5px 30px 5px 30px;
+  border-radius: 7px;
+  background-color: #3882f6;
+  color: white;
+}
+
+section.section-two {
+  background-color: white;
+  margin-top: 80px;
+}
+
+.section-two h2 {
+  text-align: center;
+  padding: 40px;
 }
