--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,16 @@ section.section-two {
   text-align: center;
   margin-top: 2px;
 }
+
+.section-three {
+  height: 50vh;
+  background-color: #e5e7eb;
+}
+
+.inspiring-quote {
+}
+
+.inspiring-quote p {
+  font-size: 36px;
+  font-weight: 100;
+}
