--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,9 @@ header {
   align-items: center;
   padding: 20px 10%;
   /* background: #1f2937; */
+  position: sticky;
+  top: 0;
+  background: #1f2937;
 }
 
 h3.logo {
